created bike drawing

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Geometry Geeks Visualisation</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/app.css">
-    <script type="text/javascript" src="/node_modules/paper/dist/paper-full.js"></script>
-    <script type="text/paperscript" src="/js/paperscript.js" canvas="bicycle"></script>
+    <link rel="stylesheet" href="./css/app.css">
+    <script type="text/javascript" src="./node_modules/paper/dist/paper-full.js"></script>
+    <script type="text/paperscript" src="./js/paperscript.js" canvas="bicycle"></script>
 </head>
 <body>
 <header class="shadow-sm">
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-6 text-center">
-                    <canvas id="bicycle" class="border"></canvas>
+                    <canvas id="bicycle" class="border" style="width:30vw;height: 20vw;"></canvas>
                 </div>
                 <div class="col-12 col-sm-6">
                     <h5>Controls</h5>
