--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/app.css">
     <script type="text/javascript" src="./node_modules/paper/dist/paper-full.js"></script>
+    <script type="text/javascript" src="./js/bike.js"></script>
+    <script type="text/javascript" src="./js/line.js"></script>
     <script type="text/paperscript" src="./js/paperscript.js" canvas="bicycle"></script>
 </head>
 <body>
