added toggle button for showing hidden details

--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
                 <div class="col-12 col-sm-6 text-center">
                     <canvas id="bicycle" class="border" style="width:30vw;height: 20vw;"></canvas>
                 </div>
+                
                 <div class="col-12 col-sm-6">
                     <h5>Controls</h5>
                     <ul>
+                        <div>
+                            <button onclick="toggle()" class="btn-primary">Bike Details Toggle</button>
+                        </div>
                         <li>Option 1</li>
                         <li>Option 2</li>
                         <li>Option 3</li>
