Remove high DPI disabling

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
             display: block;
             margin: 0 auto;
             border: 1px solid lightgray;
+            max-width: 100%;
         }
     </style>
 </head>
 <body>
 <script type="text/paperscript" src="js/bicycle-vis.js" canvas="canvas"></script>
-<canvas resize="true" id="canvas" hidpi="off" height="675px" width="1200px"></canvas>
+<canvas resize="true" id="canvas" height="675px" width="1200px"></canvas>
 </body>
 </html>
