--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+    <title>Geometry Geeks Visualisation</title>
     <script type="text/javascript" src="./node_modules/paper/dist/paper-full.js"></script>
     <style>
         canvas{
