Move isDrawable() to new file for checking data

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/screen.css">
     <script type="text/javascript" src="./node_modules/paper/dist/paper-full.js"></script>
 <script type="text/javascript" src="js/config.js"></script>
+<script type="text/javascript" src="js/data-check.js"></script>
 <script type="text/paperscript" src="js/bicycle-vis.js" canvas="canvas"></script>
 </head>
 <body>
