--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <title>Geometry Geeks Visualisation</title>
     <link rel="stylesheet" href="css/screen.css">
-    <script type="text/javascript" src="./node_modules/paper/dist/paper-full.js"></script>
-    <script type="text/javascript" src="js/config.js"></script>
-    <script type="text/javascript" src="js/data-check.js"></script>
-    <script type="text/paperscript" src="js/bicycle-vis.js" canvas="canvas"></script>
+    <script type="text/javascript" src="./node_modules/paper/dist/paper-full.js" async></script>
+    <script type="text/javascript" src="js/config.js" async></script>
+    <script type="text/javascript" src="js/data-check.js" async></script>
+    <script type="text/paperscript" src="js/bicycle-vis.js" canvas="canvas" async></script>
 </head>
 <body>
 <main>
