Toggling testing and per bike is implemented

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         <div class="canvas-container">
             <canvas id="canvas" height="450px" width="800px" resize="true"></canvas>
         </div>
-        <div class="controls-container">
-            <label for="toggle_1">Toggle 1</label>
-            <input type="checkbox" id="toggle_1">
+        <div class="controls-container" id="togButtons" >
+            <button onclick="window.globals.toggle()" class="toggle" id="toggle_test">Toggle Testing</button>
         </div>
     </div>
 </main>
