Add feature of layering bikes on top of each other as well as enabling the optional testing mode

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="./node_modules/paper/dist/paper-full.js" async></script>
     <script type="text/javascript" src="js/config.js" async></script>
     <script type="text/javascript" src="js/data-check.js" async></script>
+    <script type="text/javascript" src="js/interface.js" async></script>
     <script type="text/paperscript" src="js/bicycle-vis.js" canvas="canvas" async></script>
 </head>
 <body>
@@ -15,6 +16,7 @@
         <div class="canvas-container">
             <canvas id="canvas" height="675px" width="1600px" resize="true"></canvas>
         </div>
+        <div id="interface"></div>
     </div>
 </main>
 </body>
